--- a/AuditStudio.html
+++ b/AuditStudio.html
@@ -2052,10 +2052,93 @@
                 margin-top: 8px;
             }
         }
+
+        /* Return Capsule (Novel Navigation) - Identical to LogicLedger */
+        /* DISTINCT HUB TOOL STYLES */
+        .hub-tool {
+            position: relative;
+            background: rgba(15, 23, 42, 0.8) !important;
+            border: 1px solid transparent !important;
+            background-image: linear-gradient(var(--bg-card), var(--bg-card)), linear-gradient(135deg, #ec4899, #8b5cf6, #3b82f6) !important;
+            background-origin: border-box !important;
+            background-clip: content-box, border-box !important;
+            box-shadow: 0 0 10px rgba(139, 92, 246, 0.2);
+            overflow: hidden;
+            animation: cosmic-float 3s ease-in-out infinite;
+        }
+
+        .hub-tool:hover {
+            transform: translateY(-2px) scale(1.05) !important;
+            box-shadow: 0 0 20px rgba(139, 92, 246, 0.5);
+        }
+
+        .hub-tool svg {
+            color: #c084fc !important;
+            /* Violet tint */
+            filter: drop-shadow(0 0 5px rgba(192, 132, 252, 0.5));
+            animation: arrow-bounce 2s infinite;
+        }
+
+        @keyframes cosmic-float {
+
+            0%,
+            100% {
+                transform: translateY(0);
+            }
+
+            50% {
+                transform: translateY(-2px);
+            }
+        }
+
+        @keyframes arrow-bounce {
+
+            0%,
+            100% {
+                transform: translateX(0);
+            }
+
+            50% {
+                transform: translateX(-3px);
+            }
+        }
+
+        .return-capsule:hover svg {
+            color: var(--accent);
+            animation: none;
+            transform: translateX(-3px);
+        }
+
+        @keyframes pulse-gaze {
+
+            0%,
+            100% {
+                color: var(--text-dim);
+                filter: drop-shadow(0 0 0 rgba(255, 255, 255, 0));
+            }
+
+            50% {
+                color: #fff;
+                filter: drop-shadow(0 0 8px rgba(255, 255, 255, 0.5));
+            }
+        }
+
+        @keyframes nudge-left {
+
+            0%,
+            100% {
+                transform: translateX(0);
+            }
+
+            50% {
+                transform: translateX(-3px);
+            }
+        }
     </style>
 </head>
 
 <body>
+
     <!-- Mobile Header (visible only on mobile) -->
     <div class="mobile-header" style="display: none;">
         <button class="mobile-menu-btn" id="mobile-menu-toggle">☰</button>
@@ -2064,7 +2147,7 @@
     </div>
 
     <aside id="sidebar">
-        <div class="brand-group">
+        <a href="index.html" class="brand-group" style="text-decoration: none; color: inherit; cursor: pointer;">
             <div class="brand-icon">
                 <svg viewBox="0 0 24 24" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5" stroke-linecap="round"
@@ -2075,7 +2158,7 @@
                 <span class="brand-name">AuditStudio</span>
                 <span class="brand-tag">Professional</span>
             </div>
-        </div>
+        </a>
 
         <div class="upload-section">
             <button class="upload-btn" onclick="document.getElementById('csv-upload').click()">
@@ -2096,6 +2179,14 @@
 
         <!-- Sidebar Footer -->
         <div class="sidebar-footer">
+            <a href="index.html" class="tool-btn hub-tool" title="Volver al Hub">
+                <svg viewBox="0 0 24 24" class="tool-icon" fill="none" stroke="currentColor" stroke-width="2"
+                    stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+                    <polyline points="9 22 9 12 15 12 15 22"></polyline>
+                </svg>
+            </a>
+
             <a href="https://discord.gg/QuG9ArNn" target="_blank" class="tool-btn discord-tool"
                 title="Unirse a Discord">
                 <svg viewBox="0 0 24 24" class="tool-icon">
@@ -2277,6 +2368,15 @@
                     popover: {
                         title: '🎨 Personalización',
                         description: 'Cambia el tema visual de la aplicación con un solo clic.',
+                        side: "top",
+                        align: 'start'
+                    }
+                },
+                {
+                    element: '.hub-tool',
+                    popover: {
+                        title: '🏠 Hub Principal',
+                        description: 'Vuelve al menú de aplicaciones con este botón cósmico cuando termines.',
                         side: "top",
                         align: 'start'
                     }
