--- a/AuditStudio.html
+++ b/AuditStudio.html
@@ -2182,8 +2182,10 @@
             <a href="index.html" class="tool-btn hub-tool" title="Volver al Hub">
                 <svg viewBox="0 0 24 24" class="tool-icon" fill="none" stroke="currentColor" stroke-width="2"
                     stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
-                    <polyline points="9 22 9 12 15 12 15 22"></polyline>
+                    <rect x="3" y="3" width="7" height="7"></rect>
+                    <rect x="14" y="3" width="7" height="7"></rect>
+                    <rect x="14" y="14" width="7" height="7"></rect>
+                    <rect x="3" y="14" width="7" height="7"></rect>
                 </svg>
             </a>
 
