--- a/index.html
+++ b/index.html
@@ -355,8 +355,7 @@
                 </div>
                 <div class="module-text">
                     <h2 class="module-title">LOGIC<br>LEDGER</h2>
-                    <p class="module-desc">Auditoría inteligente de flujos de pago y métricas académicas de alto
-                        rendimiento.</p>
+                    <p class="module-desc">Analiza tu registro de pagos.</p>
                 </div>
                 <div class="module-decor" style="background: var(--accent-primary);"></div>
             </a>
@@ -375,8 +374,7 @@
                 </div>
                 <div class="module-text">
                     <h2 class="module-title">AUDIT<br>STUDIO</h2>
-                    <p class="module-desc">Centro de control para la automatización de reportes y gestión de sesiones
-                        digitales.</p>
+                    <p class="module-desc">Registra tus grupos y visualiza cuánto ganarás mes a mes.</p>
                 </div>
                 <div class="module-decor" style="background: var(--accent-secondary);"></div>
             </a>
