agregado brillo y salto al link

--- a/index.html
+++ b/index.html
@@ -291,14 +291,41 @@
             text-decoration: none;
             transition: var(--transition-ios);
             border: 1px solid rgba(255, 255, 255, 0.1);
+            animation: softHopGlow 4s infinite;
+        }
+
+        @keyframes softHopGlow {
+
+            0%,
+            20%,
+            50%,
+            80%,
+            100% {
+                transform: translateY(0);
+                box-shadow: 0 0 0px rgba(0, 242, 255, 0);
+                border-color: rgba(255, 255, 255, 0.1);
+            }
+
+            40% {
+                transform: translateY(-6px);
+                box-shadow: 0 0 15px rgba(0, 242, 255, 0.2);
+                border-color: rgba(0, 242, 255, 0.3);
+            }
+
+            60% {
+                transform: translateY(-3px);
+                box-shadow: 0 0 8px rgba(0, 242, 255, 0.1);
+                border-color: rgba(0, 242, 255, 0.2);
+            }
         }
 
         .dev-badge:hover {
             background: var(--accent-primary);
             color: black;
             box-shadow: 0 0 20px rgba(0, 242, 255, 0.4);
-            transform: translateY(-2px);
+            transform: translateY(-2px) !important;
             border-color: transparent;
+            animation-play-state: paused;
         }
 
         /* Mobile Adjustments */
